--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -318,10 +318,24 @@ button:hover{
 	text-align: center;
 }
 
+.datos-date .date-right table td{
+	padding: .2em;
+	border-bottom: 1px solid #dedede;
+}
+
 .datos-date .date-right table th{
 	padding: .4em .3em;
 	border-bottom: 1px solid rgba(117, 114, 115, 0.7);
 	font-weight: bold;
+}
+
+.datos-date .date-right table tbody{
+	border-left: 1px solid #dedede;
+}
+
+.datos-date .date-right table tbody tr:hover{
+	background-color: #D5D4D5;
+	color: #fff;
 }
 
 .datosLista{
