--- a/css/login.css
+++ b/css/login.css
@@ -105,7 +105,7 @@ html, body{
 .loginbox input[type="text"], 
 .loginbox input[type="password"], 
 .loginbox input[type="email"]{
-	width: 50%;
+	width: 50% !important;
 	min-width: 50%;
 	max-width: 50%;
 	padding: 0;
@@ -188,6 +188,8 @@ html, body{
 		-webkit-border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
+
+	box-sizing: initial;
 }
 
 .loginbox ::-webkit-input-placeholder {
