--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,22 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {display:block; }
 body {line-height:1; }
 ol,ul {list-style:none; }
-blockquote,q {quotes:none; }
-blockquote:before,blockquote:after,q:before,q:after {content:''; content:none; }
+
+blockquote,
+q {
+	/*quotes:none; */
+	margin: 0 5px;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	/*content:''; */
+	/*content:none; */
+	color: #A1CA4A;
+	padding: 0 5px;
+}
+
 table {border-collapse:collapse; border-spacing:0; }
 a {outline:none; text-decoration: none; }
 
@@ -540,7 +554,11 @@ button:hover{
 
 .seleccionada{
 	background-color: #A1CA4A;
-	color: #fff;
+	color: #fff !important;
+}
+
+.seleccionada.titulo{
+	font-weight: bold;
 }
 
 .grupo{
@@ -561,57 +579,44 @@ button:hover{
 	margin-left: 10px;
 }
 
-.busqueda,
-.busqueda-avanzada{
-	padding: 0;
-	margin: 0 !important;
-}
-
+/** busqueda resultados **/
 .busqueda{
 	display: none;
 	margin: 0 auto;
 	padding: 0;
-	width: 100%;
+	position: absolute;
+	/*width: 80% !important;
+	height: 90% !important;*/
+	background-color: #fff;
 	text-align: center;
+	overflow: auto;
+	z-index: 9999;
 }
 
-.busqueda .buscador {
-	/*display: none;*/
-	display: block;
-	margin: 0 auto;
-	margin-top: 0;
-	width: 100%;
-	background-color: #C8C7C7; /*para ie8*/
-	background-color: rgba(117, 114, 115, .4);
+.bosqueda .resultados{
+	margin-bottom: 20px;
+}
 
-	/*border-left: 1px solid rgba(117, 114, 115, 1);
-	border-right: 1px solid rgba(117, 114, 115, 1);
-	border-top: 0 solid transparent;
-	border-bottom: 1px solid rgba(117, 114, 115, 1);
+.busqueda .resultado{
+	cursor: pointer;
+	padding: 5px
+}
 
-		-o-border-radius-bottomright: 5px;
-		-o-border-radius-bottomleft: 5px;
-		-ms-border-radius-bottomright: 5px;
-		-ms-border-radius-bottomleft: 5px;
-		-moz-border-radius-bottomright: 5px;
-		-moz-border-radius-bottomleft: 5px;
-		-webkit-border-bottom-right-radius: 5px;
-		-webkit-border-bottom-left-radius: 5px;*/
-
-	color: #757273;
-	/*border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;*/
-	
-	padding: 5px 0;
-	font-size: 18px;
+.busqueda .titulo{
+	border-top: 1px solid #dedede;
 	font-weight: bold;
-	text-align: center;
+	border-bottom: 0px solid #dedede !important;
+}
 
-		-moz-user-select: all !important;  
-		-webkit-user-select: all !important;  
-		-ms-user-select: all !important;  
-		-o-user-select: all !important;  
-	user-select: all !important;
+.busqueda .resultado:hover{
+	background-color: #D5D4D5;
+}
+
+.busqueda .close{
+	cursor: pointer;
+	float: right;
+	margin-top: -15px;
+	margin-right: -15px;
 }
 
 .error{
@@ -1056,7 +1061,9 @@ button:hover{
 	background-color: #fff;
 	border: 1px solid #dedede;
 	min-height: 80%;
-	overflow: hidden;
+	/*overflow: hidden;*/
+	overflow-y: hidden;
+	overflow-x: auto;
 	position: relative;
 }
 
@@ -3454,4 +3461,3 @@ transform:rotate(-900deg);
 opacity: 0;
 transform: rotate(-900deg);
 }
-
